# gpbo

./: .gitignore  .pre-commit-config.yaml  README.md  acquisition_functions.py  gaussian_process.py  kernels.py  objective_functions.py  pyproject.toml  test_kernels.py  test_objective_functions.py
examples/: bo.py  export_3d_to_vtk.py  gp.py  make_npy.py
gpbo/: __init__.py  render.py
gpbo/_src/: acquisition_functions.py  datasets.py  engines.py  gaussian_process.py  io.py  kernels.py  objective_functions.py  renders.py  scalers.py  test_io.py  transformers.py
gpbo/_src/objective_functions/: __init__.py  core.py  csv.py  mesh_grid.py  mnist.py  six_hump_camel.py  test_csv.py  univariate.py  utils.py  wrappers.py
scripts/: export_3d.sh  make_data.sh  run_experiments.sh
tests/: test_kernels.py  test_objective_functions.py
