[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpbo"
version = "0.0.0"
authors = [
  { name="Cemlyn Neil Waters", email="cemlynwater@gmail.com" },
]
description = "JAX Gaussian Processes and Bayesian Optimization Library"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "jax",
  "jaxopt",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m build"
